# giphy-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  dependabot.yml
.github/: dependabot.yml
.github/workflows/: bump-version.yml  dependabot-automerge.yml
data/: api-response-invalid-uri.txt  api-response-no-apikey.txt  example-get-gif-response.json  example-get-gifs-response.json  example-random-response.json  example-search-response.json  example-translate-response.json  example-trending-response.json  search-response-no-apikey.json
examples/: gifs_get_gif_async.rs  gifs_get_gif_sync.rs  gifs_get_gifs_async.rs  gifs_get_gifs_sync.rs  gifs_random_async.rs  gifs_random_sync.rs  gifs_search_async.rs  gifs_search_sync.rs  gifs_translate_async.rs  gifs_translate_sync.rs  gifs_trending_async.rs  gifs_trending_sync.rs  search_async.rs  search_sync.rs  trending_async.rs  trending_sync.rs
examples_bkp/: trending_sync.rs
src/: lib.rs
src/v1/: asn.rs  async.rs  endpoints.rs  gifs.rs  mod.rs  model.rs  sync.rs
