[package]
name = "giphy"
version = "0.4.1"
description = "Giphy API wrapper for Rust"
authors = ["Maciej Makowski <maciejm.github(at)cfiet.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/maciej-makowski/giphy-rs"
keywords = ["giphy", "gif", "api", "rest", "http"]
categories = ["api-bindings"]
readme = "README.md"

[badges]
travis-ci = { repository = "maciej-makowski/giphy-rs", branch = "master" }

[dependencies]
futures = "0.3.17"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde_derive = "1.0.130"
serde = "1.0.130"

[dev-dependencies]
dotenv = "0.15.0"
mockito = "0.31.0"
tokio = { version = "1.11.0", features = ["macros"] }

