[package]
name = "giphy"
version = "0.4.3"
description = "Giphy API wrapper for Rust"
authors = ["Maciej Makowski <maciejm.giphyrs(at)cfiet.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/maciej-makowski/giphy-rs"
keywords = ["giphy", "gif", "api", "rest", "http"]
categories = ["api-bindings"]
readme = "README.md"

[features]
sync = []
async = ["dep:futures"]
default = ["sync", "async"]

[badges]
travis-ci = { repository = "maciej-makowski/giphy-rs", branch = "master" }

[dependencies]
futures = { version = "0.3.*", optional = true }
reqwest = { version = "0.11.*", features = ["blocking", "json"] }
serde_derive = "1.0.*"
serde = "1.0.*"

[dev-dependencies]
dotenv = "0.15.*"
mockito = "0.31.*"
tokio = { version = "1.21.*", features = ["macros"] }
